fixed projects view on mobile

--- a/style.css
+++ b/style.css
@@ -657,15 +657,13 @@ img {
         width: 100%;
         min-width: 390px;
         height: 0px;
-        /* overflow: hidden; */
-
-        transition: 0.75s ease;
+        overflow: hidden;
+        transition: height 0.75s ease;
 
         border-bottom: 1px solid #006b7e;
 
         display: grid;
         grid-template-columns: 130px 130px 130px;
-        grid-template-rows: 33% 33% 33%;
     }
     .nav.openMobile {
         height: 100%;
@@ -691,16 +689,19 @@ img {
         color: #006b7e;
         border-radius: 10px;
         margin: 4px 0;
+        width: 20px;
+        min-width: 20px;
     }
 
     .nav a {
-        visibility: hidden;
         margin-left: 0px;
         background-color: transparent;
         border: none;
         box-shadow: none;
 
         grid-column: 1 / 2;
+        height: 100%;
+        min-height: 41px;
     }
 
     .nav .active {
@@ -713,15 +714,16 @@ img {
     }
 
     #indexBtn {
-        grid-row: 1 / 2;
+        /* grid-row: 1 / 2; */
         z-index: 1;
+        margin-top: 1px;
     }
     #projBtn {
-        grid-row: 2 / 3;
+        /* grid-row: 2 / 3; */
         z-index: 2;
     }
     #resBtn {
-        grid-row: 3 / 4;
+        /* grid-row: 3 / 4; */
         z-index: 3;
     }
     /* main content section */
@@ -905,7 +907,7 @@ img {
         grid-column: 1 / 5;
         grid-row: 10 / 11;
         margin: 45px 10px 0px 10px;
-        font-size: 25px;
+        font-size: 20px;
     }
 
     #eduTitle hr {
@@ -984,4 +986,145 @@ img {
         margin-right: 10px;
         filter: brightness(0) invert(1);
     }
+
+    /* Projects */
+    #second {
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        font-size: 20px;
+        margin: 10px 5px 5px 10px;
+    }
+    #second hr {
+        min-width: 375px;
+        margin-left: -5px;
+        margin-top: 5px;
+    }
+        
+    .todoApp {
+        grid-column-start: 1;
+        grid-column-end: 5;
+        grid-row-start: 3;
+        grid-row-end: 17;
+
+        margin-left: 10px;
+
+        display: grid;
+        grid-template-rows: repeat(28, 50px);
+        grid-template-columns: 25% 25% 25% 25%;
+
+    }
+
+    #todoTitle {
+        font-size: 18px;
+        grid-row: 1 / 2;
+        grid-column: 1 / -1;
+        margin: -20px 0px 0px 20px;
+    }
+
+    .todoApp h4 {
+        width: fit-content;
+    }
+    .todoPurpose {
+        grid-column: 1 / 5;
+        grid-row: 2 / 4;
+
+        padding-right: 0px;
+        border-right: none;
+
+        margin: -20px 0px 0px 0px;
+    }
+    .todoPurpose hr {
+        margin-top: 3px;
+        border: 1px solid #006b7e;
+    }
+    .todoPurpose p {
+        margin-top: -15px;
+        font-weight: 100;
+    }
+
+    .todoOverview {
+        grid-column: 1 / 5;
+        grid-row: 4 / 8;
+
+        padding-right: 0px;
+        border-right: none;
+        padding-top: 0px;
+    }
+    .todoOverview hr {
+        margin-top: 3px;
+        border: 1px solid #006b7e;
+    }
+    .todoOverview p {
+        margin-top: -15px;
+        font-weight: 100;
+    }
+    .todoLang {
+        grid-column: 1 / 5;
+        grid-row: 8 / 10;
+
+        padding-right: 0px;
+        border-right: none;
+        margin-top: -20px;
+    }
+    .todoLang hr {
+        margin-top: 3px;
+        border: 1px solid #006b7e;
+    }
+    .todoLang p {
+        margin-top: -15px;
+        font-weight: 100;
+    }
+
+    .todoAuth {
+        grid-column: 1 / 5;
+        grid-row: 10 / 14;
+
+        padding-right: 0px;
+        border-right: none;
+        padding-top: 0px;
+    }
+    .todoAuth hr {
+        margin-top: 3px;
+        border: 1px solid #006b7e;
+    }
+    .todoAuth p {
+        margin-top: -15px;
+        font-weight: 100;
+    }
+
+    .todoPub {
+        grid-column: 1 / 5;
+        grid-row: 14 / 17;
+
+        padding-right: 0px;
+        border-right: none;
+        padding-top: 0px;
+        margin-top: -10px;
+    }
+    .todoPub hr {
+        margin-top: 3px;
+        border: 1px solid #006b7e;
+    }
+    .todoPub p {
+        margin-top: -15px;
+        font-weight: 100;
+    }
+
+    .todoDemo {
+        grid-column: 1 / 5; 
+        grid-row: 17 / 25;
+        padding-left: 0px;
+    }
+    .todoDemo hr {
+        margin-top: 3px;
+        border: 1px solid #006b7e;
+    }
+
+    .todoDemo video {
+        width: 370px;
+    }
+
+    
 }
